fix(backend-navigation): fix firefox overflow bug

--- a/src/app/components/backend-navigation/backend-navigation.component.scss
+++ b/src/app/components/backend-navigation/backend-navigation.component.scss
@@ -11,6 +11,7 @@ $component: 'cmp-backend-navigation';
         display: flex;
         flex-direction: column;
         align-items: center;
+        overflow: hidden;
         transition: width 0.3s ease-in-out;
         background: $color-primary;
     }
